--- a/main.css
+++ b/main.css
@@ -1,11 +1,76 @@
+/* GLOBAL STYLES */
+
 * {
   box-sizing: border-box;
 }
 
 body {
   min-height: 100vh;
+  margin: 0;
 }
 
-footer{
-  
+footer {
+}
+
+/* JASON YAP */
+
+.content-div {
+  background-color: #1e2852;
+  padding: 0 7rem;
+  color: whitesmoke;
+}
+
+.content-div h1 {
+  margin-top: 0;
+  padding-top: 2rem;
+  font-size: 3rem;
+  text-align: center;
+}
+
+.flex-content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.flex-child {
+  flex-basis: 30%;
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.items img {
+  padding: 2rem;
+}
+
+.items p {
+  padding: 1rem 2rem 2rem 2rem;
+  text-align: center;
+  font-size: 1.25rem;
+}
+
+.cryptocurrency {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 4rem 0;
+}
+
+.cryptocurrency div {
+  font-size: 2rem;
+  flex-basis: 45%;
+  padding-left: 2rem;
+}
+
+.cryptocurrency a {
+  background-color: #4d3a81;
+  font-size: 1.5rem;
+  padding: 1rem 1.5rem;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  color: whitesmoke;
 }
