Made navbar collapse into columns Changed some text/style on footer Validated HTML/CSS

--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ body {
 
 .flex-content {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -55,7 +55,7 @@ body {
 .cryptocurrency {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   padding: 4rem 0;
 }
 
@@ -75,7 +75,7 @@ body {
 }
 
 /* KEVIN EMERY */
-
+ 
 .nav-bar {
   display: flex;
   width: 100%;
@@ -101,7 +101,7 @@ body {
 
 .nav-left {
   float: left;
-  width: 50%;
+  width: 33%;
 }
 
 .nav-item-left {
@@ -112,16 +112,46 @@ body {
 }
 
 .nav-right {
-  width: 50%;
+  display: flex;
+  flex-direction: row;
+  width: 66%;
 }
 
 .nav-item-right {
   float: right;
-  margin-right: 5%;
-  width: 25%;
+  margin-left: 5%;
+  width: 33%;
   font-size: 2rem;
   text-shadow: 1px 3px 0px rgba(0,0,0,0.2);
   text-align: center;
+}
+
+@media screen and (max-width: 938px) {
+  .nav-left {
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+  .nav-item-right {
+    width: 100%;
+    background-color: #202a57;
+    margin-right: 0%;
+  }
+  .nav-item-left {
+    width: 100%;
+    padding-left: 0%;
+  }
+  .nav-right {
+    display: block;
+    width: 100%;
+  }
+  .nav-bar {
+    display: block;
+    width: 100%;
+    background-color: #243063;
+    color: white;
+    box-shadow: 0px 100px;
+  }
 }
 
 .small-hr {
@@ -138,6 +168,20 @@ body {
 
 .rounded-img {
   border-radius: 15%;
+}
+
+.text_input {
+  background-color: #324286;
+  border: 1px solid #1e2852;
+}
+
+button {
+  background-color: #4d3a81;
+  font-size: 1rem;
+  padding: 0.25rem 1.5rem;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  color: whitesmoke;
 }
 
 /* Kyle Sargeant */
@@ -161,15 +205,11 @@ body {
 /* # for div id's . for classes id */
 #footer_crypto_ul ul, #footer_NFT_ul ul {
   list-style: none;
-  
+  padding-left:0;
 }
 
 #footer_crypto_ul ul li a, #footer_NFT_ul ul li a {
   color: whitesmoke;
   text-decoration: none;
-  text-align: center;
-}
-
-#footer_crypto h3, #footer_NFT h3{
   text-align: center;
 }
