--- a/main.css
+++ b/main.css
@@ -2,14 +2,13 @@
 
 * {
   box-sizing: border-box;
+  font-family: "Titillium Web", sans-serif;
 }
 
 body {
   min-height: 100vh;
   margin: 0;
 }
-
-
 
 /* JASON YAP */
 
@@ -56,26 +55,35 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 2rem;
   padding: 4rem 0;
 }
 
 .cryptocurrency div {
   font-size: 2rem;
   flex-basis: 45%;
-  padding-left: 2rem;
+}
+
+.cryptocurrency div:nth-child(2) {
+  padding-left: 1rem;
+}
+
+.cryptocurrency p {
+  margin-top: 0;
 }
 
 .cryptocurrency a {
   background-color: #4d3a81;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   font-size: 1.5rem;
-  padding: 1rem 1.5rem;
+  padding: 1rem 2rem;
   border-radius: 0.5rem;
   text-decoration: none;
   color: whitesmoke;
 }
 
 /* KEVIN EMERY */
- 
+
 .nav-bar {
   display: flex;
   width: 100%;
@@ -107,7 +115,7 @@ body {
 .nav-item-left {
   padding-left: 5%;
   font-weight: bold;
-  text-shadow: 1px 5px 0px rgba(0,0,0,0.2);
+  text-shadow: 1px 5px 0px rgba(0, 0, 0, 0.2);
   width: 25%;
 }
 
@@ -122,7 +130,7 @@ body {
   margin-left: 5%;
   width: 33%;
   font-size: 2rem;
-  text-shadow: 1px 3px 0px rgba(0,0,0,0.2);
+  text-shadow: 1px 3px 0px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
 
@@ -167,7 +175,7 @@ body {
 }
 
 .rounded-img {
-  border-radius: 15%;
+  border-radius: 1rem;
 }
 
 .text_input {
@@ -188,8 +196,9 @@ button {
 
 .footer {
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   flex-flow: row wrap;
+  gap: 1.5rem;
   width: 100%;
   height: 40vh;
   align-content: center;
@@ -198,18 +207,111 @@ button {
   background-color: #243063;
 }
 
-#footer_crypto, #footer_about, #footer_NFT, #footer_signup {
+#footer_crypto,
+#footer_about,
+#footer_NFT,
+#footer_signup {
   justify-self: center;
 }
 
 /* # for div id's . for classes id */
-#footer_crypto_ul ul, #footer_NFT_ul ul {
+#footer_crypto_ul ul,
+#footer_NFT_ul ul {
   list-style: none;
-  padding-left:0;
+  padding-left: 0;
 }
 
-#footer_crypto_ul ul li a, #footer_NFT_ul ul li a {
+#footer_crypto_ul ul li,
+#footer_NFT_ul ul li {
+  margin-bottom: 0.75rem;
+}
+
+#footer_crypto_ul ul li a,
+#footer_NFT_ul ul li a {
   color: whitesmoke;
   text-decoration: none;
   text-align: center;
+}
+
+/* added media queries here */
+@media screen and (max-width: 1024px) {
+  .cryptocurrency div {
+    flex-basis: auto;
+    order: 1;
+    text-align: center;
+  }
+
+  .cryptocurrency div:nth-child(2) {
+    padding-left: 0;
+  }
+
+  .rounded-img {
+    width: 100%;
+  }
+
+  #footer_about {
+    grid-area: about;
+  }
+
+  #footer_crypto {
+    grid-area: crypto;
+    justify-self: start;
+  }
+
+  #footer_NFT {
+    grid-area: NFT;
+    justify-self: start;
+  }
+
+  #footer_signup {
+    grid-area: signup;
+    justify-self: start;
+  }
+
+  .footer {
+    grid-template-areas:
+      "about about"
+      "crypto NFT"
+      "signup signup";
+    grid-template-columns: 1fr 1fr;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .items p {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 426px) {
+  .content-div {
+    padding: 0 1rem;
+  }
+
+  .content-div h1 {
+    font-size: 2rem;
+  }
+
+  .items img {
+    width: 300px;
+  }
+
+  .cryptocurrency div {
+    font-size: 1.5rem;
+  }
+
+  .cryptocurrency p {
+    margin-bottom: 2rem;
+  }
+
+  .footer {
+    grid-template-areas:
+      "about"
+      "crypto"
+      "NFT"
+      "signup";
+    grid-template-columns: 1fr;
+    padding: 2vh 3rem;
+  }
 }
