removed extra br tag that caused extra space on footer. Kevin, just a heads up I use code formatter so the html in crypto-terms.html will be formatted

--- a/aboutus.css
+++ b/aboutus.css
@@ -1,5 +1,4 @@
 h1,
-h2,
 p {
   margin: 0;
 }
@@ -44,6 +43,10 @@ h4 {
 
 .member {
   flex-basis: 30%;
+}
+
+.member-details h2 {
+  margin: 0;
 }
 
 @media screen and (max-width: 768px) {
