--- a/main.css
+++ b/main.css
@@ -104,7 +104,8 @@ body {
 }
 
 .nav-item:hover {
-  color: #3a4d9c;
+  color: white;
+  font-weight: bold;
 }
 
 .nav-left {
@@ -134,7 +135,7 @@ body {
   text-align: center;
 }
 
-@media screen and (max-width: 938px) {
+@media screen and (max-width: 1200px) {
   .nav-left {
     display: block;
     text-align: center;
@@ -193,6 +194,35 @@ button {
   text-decoration: none;
   color: whitesmoke;
 }
+
+.dropdown-content {
+  display: none;
+  /*position: absolute;*/
+  background-color: #2d3b79;
+  margin: 0 auto;
+  width: 100%;
+  text-shadow: 1px 3px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 5px;
+  border: 1px solid rgb(22, 30, 61);
+}
+
+.dropdown {
+  top: 40%;
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content a {
+  color: whitesmoke;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #1e2852;}
+
+.dropdown:hover .dropdown-content {display: block;}
 
 /* Kyle Sargeant */
 
