--- a/contact.css
+++ b/contact.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-content: center;
+  padding: 1rem;
 }
 
 .contact {
@@ -88,6 +89,7 @@
 @media screen and (max-width: 1024px) {
   .contact {
     flex-direction: column;
+    padding: 0;
   }
 
   .contact-title {
