--- a/terms.css
+++ b/terms.css
@@ -15,6 +15,7 @@
     margin: 0 auto;
     border: 1px solid whitesmoke;
     border-collapse: collapse;
+    margin-top: 2.5%;
 }
 
 .term {
@@ -40,4 +41,5 @@
     width: 100px;
     margin: 0 auto;
     color: whitesmoke;
+    margin-bottom: 2.5%;
 }
