--- a/css/blog.css
+++ b/css/blog.css
@@ -7,19 +7,22 @@
 .blog-header{
   display: flex;
   width: 100%;
-  height: 125px;
-  background-image: url("images/Dark-Blue_blog-header-new.png");
+  height: 250px;
+  background-image: url("../images/bluepixelart.png");
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   align-items: center;
   justify-content: center;
- 
- 
 }
 
 #blog-header-text{
   font-size: xxx-large;
-  color: whitesmoke
+  background: #1e2852;
+  border: 1px solid #243063;
+  padding: 1%;
+  border-radius: 5%;
+  color: whitesmoke;
 }
 
 
@@ -44,13 +47,13 @@
 
 #blog-sharebar{
   padding-left: 8px;
-  display: inline-block;
-  height: 46px;
+  display: flex;
+  justify-content: center;
+  height: 48px;
   border-top: 1px solid #1e2852;
   background-color: #243063;
   position: sticky;
   top: 0px;
-  align-items: center;
   font-size: x-large;
   text-align: center;
 }
