--- a/css/main.css
+++ b/css/main.css
@@ -376,7 +376,8 @@ button {
 
 .definition_source{
   display: block;
-  width: 100px;
+  width: 100%;
   margin: 0 auto;
   color: whitesmoke;
+  text-align: center;
 }
