--- a/css/calendar.css
+++ b/css/calendar.css
@@ -22,7 +22,9 @@
 .calendar_holder{
     height: 250px;
     width: 250px;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     outline: 1px whitesmoke solid;
     margin-right: 1px;
 }
@@ -48,21 +50,22 @@
         flex-direction: column;
     }
     .calendar_holder{
+        flex-direction: row;
+        align-items: center;
         width: 100%;
         height: 100px;
     }
+
     .calendar_date {
-        width: 25%;
+        width: 100%;
         top: 50%;
-        height: 50%;
         vertical-align: center;
     }
     .calendar_events {
         right: 0%;
-        width: 75%;
-        height: 100%;
-        border-left: 1px whitesmoke solid;
+        width: 100%;
         bottom: 0px;
+        border-left: 1px whitesmoke solid;
     }
 }
 
