--- a/css/scams.css
+++ b/css/scams.css
@@ -33,8 +33,25 @@
     margin: 10px 30px 10px 30px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
     .scam_box {
         margin: 0 auto;
+        width: 512px;
+    }
+}
+@media screen and (max-width: 512px) {
+    .scam_box {
+        margin: 0 auto;
+        width: 100%;
+        max-width: 100vw;
+        padding: 5px;
+    }
+    .scam_box > img {
+        border-radius: 12px;
+        width: 100%;
+        max-width: 100vw;
+    }
+    .scam_box > p {
+        margin: 0;
     }
 }
