--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -50,7 +50,6 @@ h4 {
   margin: 2rem;
   font-size: 1.5rem;
   list-style: none;
-  padding-inline-start: 1rem;
 }
 
 .meet-our-team h1 {
@@ -64,13 +63,23 @@ h4 {
   align-items: center;
   flex-wrap: wrap;
   gap: 1rem;
-  justify-content: space-between;
 }
 
 .member {
-  flex-basis: 30%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 300px;
   justify-content: center;
   align-items: center;
+}
+
+.member-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .member-details h2 {
