--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,8 @@ body {
   margin: 0;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-family: "Titillium Web", sans-serif;
 }
 
@@ -61,6 +62,7 @@ h1, h2 {
   justify-content: center;
   gap: 2rem;
   padding: 4rem 0;
+  transition: transform 1s, opacity 1s;
 }
 
 .cryptocurrency div {
@@ -84,6 +86,11 @@ h1, h2 {
   border-radius: 0.5rem;
   text-decoration: none;
   color: whitesmoke;
+}
+
+.cryptocurrency--hidden {
+  opacity: 0;
+  transform: translateY(4rem);
 }
 
 /* KEVIN EMERY */
@@ -151,7 +158,6 @@ h1, h2 {
   text-shadow: 1px 3px 0px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
-
 
 .dropdown-content {
   display: none;
@@ -374,7 +380,7 @@ button {
   }
 }
 
-.definition_source{
+.definition_source {
   display: block;
   width: 100%;
   margin: 0 auto;
